# singletonpp

./: CMakeLists.txt  README.md  singleton.hxx
tests/: CMakeLists.txt  basic.cxx
